apps/prowlarr/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.${DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: http
    - match: Host(`prowlarr.${DOMAIN}`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
    - match: Host(`prowlarr.${DOMAIN}`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
      middlewares:
        - name: authentik
          namespace: traefik
